# fastapi-claude37ext-anthropic

./: .gitignore  .ruff.toml  Dockerfile  README.md  compose.yml  pyproject.toml  run.sh
.github/workflows/: build.yml  deploy.yml  lint.yml  test.yml
infra/: README.md
infra/terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/.terraform/: terraform.tfstate
src/app/: __init__.py  main.py
src/app/api/: routes.py
src/hello_world_app/: main.py
src/hello_world_app/api/: __init__.py  routes.py
tests/: __init__.py  conftest.py  test_api.py
