[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello_world_app"
version = "0.1.0"
description = "A simple Hello World web application using FastAPI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.23.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
    "ruff>=0.1.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hello_world_app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.ruff]
line-length = 96
target-version = "py312"
src = ["src", "tests"]
